--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,48 @@ button {
   padding: 0.25rem 0.5rem;
   background-color: rgb(235, 235, 235);
 }
+
+/* Toolbar styling */
+.toolbar-container{
+  background-color: rgb(248, 248, 248);
+  width: 100%;
+  padding: 1rem;
+  gap: 1rem;
+  border-bottom: 2px solid rgb(205,205,205);
+}
+.text-format{
+  gap: 1rem;
+}
+.font-size-controls,
+.font-family select{
+  font-size: .75rem;
+  box-shadow: rgba(57, 57, 57, 0.2) 0px 2px 4px 0px;
+  border-radius: 30px;
+  padding: .25rem .5rem;
+  gap: .35rem;
+  color:rgb(156,156,156) ;
+}
+.font-size-controls button{
+  color:rgb(156,156,156) ;
+}
+.font-family select{
+  border: none;
+  padding: .35rem .5rem;
+
+}
+
+/* Undo Redo ele styling */
+.undoRedoElement{
+  padding: 1rem;
+  gap: 3rem;
+  background-color: rgb(248, 248, 248);
+  border: 1.5px solid rgb(205,205,205);
+  box-shadow: rgba(176, 176, 176, 0.167) 0px 2px 6px;
+  position: relative;
+  z-index: 1;
+}
+
+.button-container{
+  flex-direction: column;
+  color: rgb(156,156,156);
+}
